--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,14 @@ ul {
 /*------tarjeta-------*/
 .card {
   transition: box-shadow .3s;
+  transition: transform .2s;
   border-radius: 6px;
   border: 1px solid #E6E8E6;
   background: #ffffff; }
 
 .card:hover {
-  box-shadow: 0 0 18px #E6E8E6; }
+  box-shadow: 0 0 18px #F2F3F2;
+  transform: scale(1.05); }
 
 /*------filtro-------*/
 .bg-border-menu {
@@ -193,6 +195,12 @@ a:hover {
   margin-right: auto;
   background-size: cover; }
 
+/*---- responsive para menu ----*/
+@media screen and (min-width: 320px) and (max-width: 1100px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+    margin-left: 0px; } }
+
 body {
   font-family: 'Lato', sans-serif;
   word-spacing: 1px;
@@ -283,3 +291,7 @@ button:hover {
 button a {
   text-decoration: none;
   color: white; }
+
+a.dropdown-item:hover {
+  color: #ffffff;
+  background-color: #394533; }
