--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -65,3 +65,13 @@ a:hover {
     margin-right: auto;
     background-size: cover;
 }
+
+
+/*---- responsive para menu ----*/
+
+@media screen and (min-width: 320px) and (max-width: 1100px) {
+    .navbar-expand-lg .navbar-nav .dropdown-menu {
+        position: absolute;
+        margin-left: 0px;
+    }
+}
