--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -19,6 +19,10 @@ h6 {
     padding: 0;
 }
 
+h1 {
+    font-size: 35px;
+}
+
 hr {
     border: 1px solid $grey-01;
     opacity: 1;
@@ -51,6 +55,10 @@ label {
     list-style: none;
     font-size: 16px;
     line-height: 150%;
+}
+
+label:hover {
+    color: $white;
 }
 
 ul {
