--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -27,7 +27,8 @@ a:hover {
 }
 
 .dropdown-item:hover {
-    background-color: $grey-border;
+    background-color: $green-dark;
+    color: $white;
 }
 
 .navbar-expand-lg .navbar-collapse {
@@ -64,14 +65,4 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     background-size: cover;
-}
-
-
-/*---- responsive para menu ----*/
-
-@media screen and (min-width: 320px) and (max-width: 1100px) {
-    .navbar-expand-lg .navbar-nav .dropdown-menu {
-        position: absolute;
-        margin-left: 0px;
-    }
 }
